--- a/styledalo.css
+++ b/styledalo.css
@@ -1,43 +1,55 @@
-body h1{
-    text-align: center;
-    font-size: larger;
+*{
+    box-sizing: border-box;
+    margin: 10px;
 }
+
 body{
-    background-color: green;
-}
-p{
-    color: black;
-    background-color: yellow;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    margin: 20px 30px;
+    padding: 10px;
+    font-weight: bold;
 }
 
+input[type="text"],
+input[type="email"],
+input[type="date"],
+input[type="number"],
+select,
+textarea{
+    width: 100%;
+    padding: 20px;
+    background-color: rgb(221, 202, 202);
+    border-radius: 5px;
+    border: none;
+}
 
-h1{
-    color: yellow;
-    background-color: black;
-    font-style: italic;
+.container{
+    background-color:gray ;
+    padding: 20px 30px;
 }
-p select{
-    color: red;
-    background-color: black;
+
+fieldset{
+    background-color:  rgb(221, 202, 202);
+    border-radius: 5px;
+    border: none;
 }
-h2+p{
-    background-color: rgb(22, 5, 19);
-    color: brown;
-    font-size: medium;
+
+input[type="submit"]{
+    background-color: rgb(181, 44, 87);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border: none;
+    padding: 20px;
+    border-radius: 5px;
+    width: 100%;
+    cursor: pointer;
 }
-p#one{
-    color: blue;
-    background-color: rgb(22, 16, 8);
+input[type="submit"]:hover{
+    background-color: gold;
+    
 }
-.area{
-    color: black;
-    background-color:yellowgreen;
-}
-span.special{
-    color: brown;
-    background-color: black;
-}
-.submit{
-    color: brown;
-    background-color: black;
+
+.main_heading{
+    text-align: center;
+    text-decoration: underline;
 }
