--- a/styledalo.css
+++ b/styledalo.css
@@ -1,6 +1,8 @@
 *{
+    
     box-sizing: border-box;
     margin: 10px;
+    width: 80%;
 }
 
 body{
@@ -9,6 +11,10 @@ body{
     margin: 20px 30px;
     padding: 10px;
     font-weight: bold;
+    background-color: rgb(21, 179, 137)
+    ;
+    
+
 }
 
 input[type="text"],
@@ -32,6 +38,7 @@ textarea{
 fieldset{
     background-color:  rgb(221, 202, 202);
     border-radius: 5px;
+    
     border: none;
 }
 
@@ -52,4 +59,33 @@ input[type="submit"]:hover{
 .main_heading{
     text-align: center;
     text-decoration: underline;
+}
+
+.area{
+    /* padding: 10px; */
+}
+.photo{
+    padding: 50px;
+    position: absolute ;
+    top:20%;
+    right:0%;
+    width: 40%;
+    height: 20%;
+}
+.text{
+    text-align: center;
+    color: black;
+    
+}
+.head{
+    background-color: blue;
+    width: 100%;
+    border-radius: 50px;
+    width: 90vw;
+    text-align: center;
+
+}
+.neta{
+    margin-left: 200px;
+    padding: 20px;
 }
